<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.hotpeppergourmetsearch.yahooTel.TelViewModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photoLarge"
                android:layout_width="0dp"
                android:layout_height="280dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/photoLarge_imageText"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.shop.photo.pc.l}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/stationView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/frame_style"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.station_name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/genreText" />

            <TextView
                android:id="@+id/catchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/catch_text"
                android:textSize="16sp"
                android:visibility="@{viewModel.shop.catch.isEmpty ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budgetView" />

            <TextView
                android:id="@+id/stationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/station_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/stationView"
                app:layout_constraintTop_toTopOf="@+id/genreText" />

            <TextView
                android:id="@+id/budgetView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/frame_style"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.budget.name}"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/budgetTextView"
                app:layout_constraintTop_toBottomOf="@+id/budgetTextView" />

            <TextView
                android:id="@+id/budgetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/budget_textView"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genreView" />

            <TextView
                android:id="@+id/catchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/frame_style"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.catch}"
                android:visibility="@{viewModel.shop.catch.isEmpty ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/catchText"
                app:layout_constraintTop_toBottomOf="@+id/catchText"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/genreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/genre_text"
                android:textSize="16sp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapButton" />


            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/time_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/timeView"
                app:layout_constraintTop_toBottomOf="@+id/shopNameView" />

            <TextView
                android:id="@+id/timeView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/frame_style"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.open}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeText" />

            <TextView
                android:id="@+id/shopNameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:text="@{viewModel.shop.name}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photoLarge" />

            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/addressView"
                app:layout_constraintTop_toBottomOf="@+id/timeView" />

            <TextView
                android:id="@+id/addressView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/frame_style"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.address}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressText" />

            <TextView
                android:id="@+id/telView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/frame_style"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.tel}"
                android:visibility="@{viewModel.tel.isEmpty ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/telText" />

            <TextView
                android:id="@+id/genreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/frame_style"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.genre.name}"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/genreText"
                app:layout_constraintTop_toBottomOf="@+id/genreText" />

            <Button
                android:id="@+id/mapButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:onClick="onMapSearchButtonClick"
                android:text="@string/map_text"
                android:textSize="12sp"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressView" />

            <TextView
                android:id="@+id/telText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel_text"
                android:textSize="16sp"
                android:visibility="@{viewModel.tel.isEmpty ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintStart_toStartOf="@+id/telView"
                app:layout_constraintTop_toTopOf="@+id/budgetTextView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>